# Punya-Shinta-praktikum

ML6/: pyproject.toml
ML6/myenv/Scripts/: activate  activate.bat  lottie_cat.py  lottie_convert.py  lottie_diagnostic.py  lottie_diff.py  lottie_fonts.py  lottie_printcolor.py  raster_palette.py  tgs_check.py
ML6/src/: analisis_data.py  app.py  klasifikasi_data.py  transferlearning.py  upload_data.py
